Get shared files/directories
